# axis-swgi

./: .gitignore  COMMAND_CENTER_IMPLEMENTATION_STEPS.txt  README.md  STANDALONE_PRODUCT_PLAN.txt  bundle.Dockerfile  flow.txt  history.txt  notes.txt  preflight-commands.txt  remaining.txt
swgi-command-center/: .dockerignore  .env.example  Dockerfile  LOVABLE_PROMPT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
swgi-command-center/app/: __init__.py  auth.py  config.py  database.py  db.py  db_url.py  logging_config.py  main.py  migrations.py  models.py  orm.py  receipts.py  security.py
swgi-command-center/app/modules/: __init__.py
swgi-command-center/app/modules/api_keys/: __init__.py  models.py  (+1 more)
swgi-command-center/data/input/: policy.json
swgi-command-center/docs/: ALIGNMENT.md  ARCHITECTURE.md  DEPLOYMENT.md  OBSERVABILITY.md  OPERATOR_CONTRACT.md  SECURITY.md
swgi-command-center/migrations/: README.md  env.py  script.py.mako
swgi-command-center/migrations/versions/: 0001_initial_command_center_schema.py  0002_org_cluster_auth_onboarding.py  0003_prod_hardening.py  0004_user_auth.py  0005_sales_readiness.py  0006_partner_launch_integrations.py
swgi-command-center/scripts/: google_marketplace_reporter.py
swgi-command-center/tests/: test_auth_scope.py  test_db_url.py  test_integration_postgres.py  test_metadata_boundary.py  test_modular_architecture.py  test_partner_integrations.py
swgi_core/: .env.example  README.md  pyproject.toml
swgi_core/swgi_core/: __init__.py  config.py  evaluator.py  metrics.py  models.py  policy_engine.py  receipt_emitter.py  signature.py
swgi_core/tests/: test_evaluator.py
(+132 files in other folders)
